refactor(web): Replace JSON output with JS output (#27)

--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
     "protobufjs": "6.8.6"
   },
   "description": "Protocol definition for generic messages.",
-  "devDependencies": {
-    "typescript": "2.8.3"
-  },
   "files": [
-    "web/index.d.ts",
-    "web/index.js",
-    "web/messages.json"
+    "web/Protobuf.d.ts",
+    "web/Protobuf.js"
   ],
   "license": "GPL-3.0",
-  "main": "web/index.js",
+  "main": "web/Protobuf.js",
   "name": "@wireapp/protocol-messaging",
   "repository": "https://github.com/wireapp/generic-message-proto.git",
   "scripts": {
-    "build": "tsc",
-    "convert": "node web/convert.js",
-    "dist": "yarn build && yarn convert"
+    "dist": "node web/compile.js",
+    "version": "yarn dist",
+    "postversion": "git push && git push --tags"
   },
-  "types": "web/index.d.ts",
+  "types": "web/Protobuf.d.ts",
   "version": "1.20.0"
 }
