--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: buildpack-deps:trusty
     steps:
+      - checkout
       - run: curl -sL https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip -o protoc.zip 
       - run: sudo apt-get update
       - run: sudo apt-get install unzip
