--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": [
-      "DOM",
-      "ES6"
-    ],
+    "lib": ["dom", "es6"],
     "module": "CommonJS",
     "moduleResolution": "node",
     "noEmitOnError": true,
@@ -17,7 +14,5 @@
     "strict": true,
     "target": "ES5"
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
