--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -43,15 +43,30 @@ library
   import:              shared-properties
   hs-source-dirs:      src
   ghc-options:         -fplugin=Polysemy.Plugin
-  build-depends:       base >=4.12 && <4.13
+  build-depends:
+                       aeson
+                     , base >=4.12 && <4.13
+                     , base64
+                     , bytestring
+                     , cookie
+                     , http-client
+                     , http-types
+                     , network-uri
                      , optparse-applicative
-                     , text
                      , polysemy
                      , polysemy-plugin
-  exposed-modules:     Wire.CLI.Options
-                     , Wire.CLI.Execute
+                     , text
+                     , time
+  exposed-modules:
+                       Wire.CLI.Options
                      , Wire.CLI.Backend
+                     , Wire.CLI.Backend.HTTP
+                     , Wire.CLI.Backend.Polysemy
+                     , Wire.CLI.Backend.Types
+                     , Wire.CLI.Execute
                      , Wire.CLI.Store
+                     , Wire.CLI.Store.File
+                     , Wire.CLI.Store.Polysemy
 
 test-suite "unit"
   import:              shared-properties
@@ -60,15 +75,28 @@ test-suite "unit"
   type:                exitcode-stdio-1.0
   build-tools:         hspec-discover
   ghc-options:         -fplugin=Polysemy.Plugin
-  build-depends:       base >= 4.12 && <4.13
+  build-depends:
+                       QuickCheck
+                     , aeson
+                     , base >= 4.12 && <4.13
+                     , cookie
                      , hspec
+                     , http-client
+                     , network-uri
                      , polysemy
                      , polysemy-plugin
+                     , quickcheck-instances
+                     , temporary
                      , text
+                     , time
                      , wire-cli
-  other-modules:       Wire.CLI.ExecuteSpec
+  other-modules:
+                       Wire.CLI.ExecuteSpec
                      , Wire.CLI.MockBackend
                      , Wire.CLI.MockStore
+                     , Wire.CLI.Backend.TypesSpec
+                     , Wire.CLI.Backend.Arbitrary
+                     , Wire.CLI.Store.FileSpec
 
 -- custom-setup
 --   setup-depends:       base
