--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-14.27
+resolver: lts-15.8
 
 packages:
 - .
@@ -8,7 +8,7 @@ extra-deps:
 - polysemy-1.3.0.0
 - polysemy-plugin-0.2.5.0
 - base64-0.4.1@sha256:aedc26f581f81a112af588eec8cf9c2e8db219a60fafc1cb77fd73672f1f7dcb,2832
-
+- ghc-tcplugins-extra-0.3.2@sha256:1bbfd4449c3669a31618ea0ebc5d00d980a53988daad3b6218bab5c8cdff268d,1687
 nix:
   shell-file: stack-deps.nix
   # enable: true
