--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -18,6 +18,7 @@ extra-source-files:  CHANGELOG.md
 
 common shared-properties
   default-language: Haskell2010
+  build-depends:       base >=4.12 && <4.14
   default-extensions:  DataKinds
                      , FlexibleContexts
                      , GADTs
@@ -34,7 +35,7 @@ executable wire-cli
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base
                      , wire-cli
   hs-source-dirs:      app
   default-language:    Haskell2010
@@ -45,7 +46,6 @@ library
   ghc-options:         -fplugin=Polysemy.Plugin
   build-depends:
                        aeson
-                     , base >=4.12 && <4.13
                      , base64
                      , bytestring
                      , cookie
@@ -73,12 +73,11 @@ test-suite "unit"
   hs-source-dirs:      test
   main-is:             Spec.hs
   type:                exitcode-stdio-1.0
-  build-tools:         hspec-discover
+  build-tool-depends:  hspec-discover:hspec-discover
   ghc-options:         -fplugin=Polysemy.Plugin
   build-depends:
                        QuickCheck
                      , aeson
-                     , base >= 4.12 && <4.13
                      , cookie
                      , hspec
                      , http-client
