--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -19,6 +19,7 @@ extra-source-files:  CHANGELOG.md
 common shared-properties
   default-language: Haskell2010
   build-depends:       base >=4.12 && <4.14
+  ghc-options:         -Wall
   default-extensions:  DataKinds
                      , FlexibleContexts
                      , GADTs
@@ -35,7 +36,7 @@ executable wire-cli
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  ghc-options:         -threaded
+  ghc-options:         -Wall -threaded
   build-depends:       base
                      , wire-cli
   hs-source-dirs:      app
@@ -50,11 +51,14 @@ library
                      , base64
                      , bytestring
                      , cookie
+                     , cryptobox-haskell
+                     , directory
                      , http-client
                      , http-client-openssl
                      , http-types
                      , HsOpenSSL
                      , HsOpenSSL-x509-system
+                     , filepath
                      , network-uri
                      , optparse-applicative
                      , polysemy
@@ -62,16 +66,22 @@ library
                      , text
                      , time
   exposed-modules:
-                       Wire.CLI.Options
-                     , Wire.CLI.App
+                       Wire.CLI.App
                      , Wire.CLI.Backend
+                     , Wire.CLI.Backend.Client
+                     , Wire.CLI.Backend.Prekey
+                     , Wire.CLI.Backend.Credential
                      , Wire.CLI.Backend.HTTP
                      , Wire.CLI.Backend.Polysemy
-                     , Wire.CLI.Backend.Credential
+                     , Wire.CLI.CryptoBox
+                     , Wire.CLI.CryptoBox.FFI
+                     , Wire.CLI.CryptoBox.Polysemy
                      , Wire.CLI.Execute
+                     , Wire.CLI.Options
                      , Wire.CLI.Store
                      , Wire.CLI.Store.File
                      , Wire.CLI.Store.Polysemy
+                     , Wire.CLI.Util.ByteStringJSON
 
 test-suite "unit"
   import:              shared-properties
@@ -84,6 +94,7 @@ test-suite "unit"
                        QuickCheck
                      , aeson
                      , cookie
+                     , cryptobox-haskell
                      , hspec
                      , http-client
                      , network-uri
@@ -98,6 +109,7 @@ test-suite "unit"
                        Wire.CLI.ExecuteSpec
                      , Wire.CLI.MockBackend
                      , Wire.CLI.MockStore
+                     , Wire.CLI.MockCryptoBox
                      , Wire.CLI.Backend.TypesSpec
                      , Wire.CLI.Backend.Arbitrary
                      , Wire.CLI.Store.FileSpec
