Use fused-effects instead of polysemy

--- a/stack.yaml
+++ b/stack.yaml
@@ -13,6 +13,8 @@ extra-deps:
 - HsOpenSSL-x509-system-0.1.0.3@sha256:f4958ee0eec555c5c213662eff6764bddefe5665e2afcfd32733ce3801a9b687,1774
 - git: https://github.com/wireapp/cryptobox-haskell.git
   commit: 7546a1a25635ef65183e3d44c1052285e8401608
+- git: https://github.com/fused-effects/fused-effects.git
+  commit: 11498a404dd2d6c3f0eb361704b6d7c1623c0406
 
 nix:
   shell-file: stack-deps.nix
