Extract JSONStrategy and use it for Client instances

--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -90,6 +90,7 @@ library
                      , Wire.CLI.Store.Effect
                      , Wire.CLI.Store.File
                      , Wire.CLI.Util.ByteStringJSON
+                     , Wire.CLI.Util.JSONStrategy
 
 test-suite "unit"
   import:              shared-properties
