--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -17,7 +17,7 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 common shared-properties
-  default-language: Haskell2010
+  default-language:    Haskell2010
   build-depends:       base >=4.12 && <4.14
   ghc-options:         -Wall
   default-extensions:  DataKinds
@@ -147,7 +147,28 @@ test-suite "unit"
                      , Wire.CLI.Store.FileSpec
                      , Wire.CLI.TestUtil
 
--- custom-setup
---   setup-depends:       base
---                      , autopack
---                      , Cabal
+test-suite "integration"
+  default-language:    Haskell2010
+  hs-source-dirs:      integration
+  main-is:             Spec.hs
+  type:                exitcode-stdio-1.0
+  ghc-options:         -Wall -threaded
+  build-depends:       aeson
+                     , base >=4.12 && <4.14
+                     , bytestring
+                     , HsOpenSSL
+                     , HsOpenSSL-x509-system
+                     , hspec
+                     , hspec-core
+                     , http-client
+                     , http-client-openssl
+                     , http-types
+                     , network-uri
+                     , optparse-applicative
+                     , polysemy
+                     , random
+                     , retry
+                     , shelly
+                     , temporary
+                     , text
+                     , wire-cli
