Integration tests: Extract TestInput in a separate module

--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -172,3 +172,4 @@ test-suite "integration"
                      , temporary
                      , text
                      , wire-cli
+  other-modules:       TestInput
