--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -56,7 +56,7 @@ library
                      , deriving-aeson
                      , directory
                      , extra
-                     , http-client
+                     , http-client < 0.7
                      , http-client-openssl
                      , http-types
                      , HsOpenSSL
@@ -67,7 +67,7 @@ library
                      , optparse-applicative
                      , polysemy
                      , polysemy-plugin
-                     , polysemy-zoo
+                     , polysemy-zoo >= 0.7
                      , text
                      , time
                      , unordered-containers
