--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -34,12 +34,19 @@ common shared-properties
 
 executable wire-cli
   main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
   ghc-options:         -Wall -threaded
   build-depends:       base
                      , wire-cli
   hs-source-dirs:      app
+  default-language:    Haskell2010
+
+executable wire-tui
+  main-is:             Main.hs
+  ghc-options:         -Wall -threaded
+  build-depends:       base
+                     , wire-cli
+                     , brick
+  hs-source-dirs:      tui
   default-language:    Haskell2010
 
 library
@@ -49,6 +56,7 @@ library
   build-depends:
                        aeson
                      , base64
+                     , brick
                      , bytestring
                      , containers
                      , cookie
@@ -72,6 +80,7 @@ library
                      , time
                      , unordered-containers
                      , uuid
+                     , vty
   exposed-modules:
                        Wire.CLI.App
                      , Wire.CLI.Backend
@@ -110,6 +119,7 @@ library
                      , Wire.CLI.Store.StoredMessage
                      , Wire.CLI.Util.ByteStringJSON
                      , Wire.CLI.Util.JSONStrategy
+                     , Wire.TUI.Main
 
 test-suite "unit"
   import:              shared-properties
