--- a/cabal.project
+++ b/cabal.project
@@ -8,7 +8,7 @@ source-repository-package
   location: git://github.com/wireapp/cryptobox-haskell
   tag: 3a65e2fa055ae2f4ffaea4c168a3edfe8958d84d
 
-packages: ./wire-cli.cabal
+packages: ./wire-cli.cabal ./wire-message/wire-message.cabal
 
 package wire-cli
   tests: true
