--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@ resolver: lts-16.13
 
 packages:
 - .
+- ./wire-message
 extra-deps:
 # Dependencies not present in the snapshot
 - polysemy-plugin-0.2.5.0@sha256:67e30be568a141b852aace1a60e180cb5060fbb2835365a81a3ea779536d6d35,2952
