--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dist": "node web/compile.js",
     "postversion": "git push origin && git push origin --tags && npm publish",
-    "preversion": "git checkout master && git pull && yarn && yarn test && yarn dist",
+    "preversion": "git checkout master && git pull && yarn && yarn dist && yarn test",
     "test": "tsc --noEmit"
   },
   "types": "web/Protobuf.d.ts",
