--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": ["dom", "es6"],
+    "lib": ["DOM", "ES6"],
     "module": "CommonJS",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "noEmitOnError": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
