fix(web): Allow force push for CI build pipeline (#67)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "repository": "https://github.com/wireapp/generic-message-proto.git",
   "scripts": {
     "dist": "node web/compile.js",
-    "postversion": "git push origin && git push origin --tags && npm publish",
+    "postversion": "git push --force --tags && npm publish",
     "preversion": "git checkout master && git pull && yarn && yarn dist && yarn test",
     "test": "tsc --noEmit"
   },
