--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,5 @@
 env="$(nix-build $PWD/direnv.nix -A devEnv --no-out-link)"
 
 load_prefix "${env}"
+path_add XDG_DATA_DIRS "${env}/share"
+path_add GI_TYPELIB_PATH "${env}/lib/girepository-1.0"
