GUI: Use SeqStore instead of StringList for conversations

--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -89,6 +89,7 @@ library
                      , haskell-gi-base
                      , gi-pango
                      , gi-glib
+                     , gi-gio-hs-list-model
   exposed-modules:
                        Wire.CLI.App
                      , Wire.CLI.Backend
